# langhack

./: .gitignore  README.md  demo-slides.html  demo-slides.md
.beads/: interactions.jsonl  metadata.json
.kiro/specs/voice-language-practice/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: box_upload.py  config.py  main.py  prompts.py  scenario_agent.py  scenarios.py  suggest.py  teacher_agent.py  tools.py  voice.py
backend/tests/: test_box_upload_errors.py  test_default_destinations.py  test_filter_scraped_items_property.py  test_pass_fail_threshold_property.py  test_prompts.py  test_scenario_agent_category_coverage.py  test_scenario_agent_fallback.py  test_scenario_transform_property.py  test_scenarios.py  test_score_range_property.py  test_session_report_completeness.py  test_teacher_agent_target_language.py  test_voice_protocol.py
frontend/: .gitignore  App.tsx  README.md  app.json  jest.config.ts  package-lock.json  package.json  tsconfig.json
frontend/public/: audio-player-processor.js
frontend/src/: theme.ts
frontend/src/__tests__/: achievementMilestone.property.test.ts  feedbackValidation.property.test.ts  postSessionFlowOrdering.property.test.ts  scenarioValidation.property.test.ts  scoreColorMapping.property.test.ts  sessionPersistence.property.test.ts  transcriptEntry.property.test.ts
frontend/src/components/: PassFailBadge.tsx
frontend/src/screens/: HistoryScreen.tsx  PostSessionScreen.tsx  ScenarioListScreen.tsx  SessionScreen.test.ts  SessionScreen.tsx  (+1 more)
(+13 files in other folders)
